# lpsolver

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
archive/: main.py
examples/: 2_1.txt
generate/: generate.py
include/LBFGSpp/LBFGSpp/: LineSearchNocedalWright.h
include/lpsolver/: cpptocu.hpp  generate.hpp  ludec.hpp  matrices.hpp  solver.hpp  structs.hpp
lib/: central.cpp  generate.cpp  matrices.cpp  predict.cpp  solve.cpp  structs.cpp
lib/lpsolver/: central.cpp  cpptocu.cpp  generate.cpp  ludec.cu  predict.cpp  solve.cpp
src/: generate_problem.cpp  lpsolver.cpp
